<resources>
    <string name="app_name">InventoryApp</string>
    <string name="add_to_inventory">Add to inventory</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
</resources>
