<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <EditText
        android:id="@+id/edit_product_name"
        style="@style/editStyle"
        android:hint="@string/product_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_quantity"
        style="@style/editStyle"
        android:hint="@string/quantity"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_product_price"
        style="@style/editStyle"
        android:hint="@string/price"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edit_supplier_name"
        style="@style/editStyle"
        android:hint="@string/supplier_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_supplier_phone_number"
        style="@style/editStyle"
        android:hint="@string/supplier_phone_number"
        android:inputType="phone" />
</LinearLayout>
